syntax = "proto3";
package playerservice;
import "common.proto";
option cc_generic_services = true;

message SeceneTestRequest
{
}

message SeceneTestResponse
{
	ClientError error = 1;
}

message EnterSeceneNotify
{
}

service PlayerSceneService 
{
  rpc EnterScene (SeceneTestRequest) returns (SeceneTestResponse);
}